--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-4 col-md-4{% if page.legacy %} col-xs-4{% endif %}">
-        <p class="thuhidden">本站{% if site.operator %}由{{ site.operator }}支持创办，{% endif %}由清华大学 TUNA 协会运行维护。</p>
-        <p class="thuhidden">清华大学 TUNA 协会，全名清华大学学生网络与开源软件协会，是由清华大学热爱网络技术和开源软件的极客组成的学生技术社团。</p>
+        <p class="thuhidden">本站{% if site.operator %}由{{ site.operator }}支持创办，{% endif %}由 IMAU 协会运行维护。</p>
+        <p class="thuhidden">本站网页基于TUNA Mirror Web，在此感谢 TUNA 协会的开源。</p>
         <p>本站相关源码可在 <a href="https://github.com/tuna/tunasync"><em>这里(镜像管理器)</em></a> 和 <a href="https://github.com/tuna/mirror-web"><em>这里(镜像站网页)</em></a> 获取。</p>
-        <p class="thuhidden">根据相关法律法规，本站不对欧盟用户提供服务。</p>
         {% if site.footnote %}
         <p class="thuhidden">{{ site.footnote }}</p>
         {% endif %}
@@ -23,32 +22,13 @@
             <a href="https://web.libera.chat/#tuna">{% fa_svg fas.fa-hashtag %} #tuna at Libera.Chat</a>
             </li>
             <li>
-            <a href="https://github.com/tuna/">{% fa_svg fab.fa-github %} GitHub </a>
+            <a href="https://github.com/serialt/">{% fa_svg fab.fa-github %} GitHub </a>
             </li>
             <li>
             <a href="http://weibo.com/u/5402274706">{% fa_svg fab.fa-weibo %} 新浪微博</a>
             </li>
           </ul>
         </div>
-        {% if site.sponsor %}
-        <h4>Sponsor</h4>
-        <div class="img-responsive thuhidden">
-        {% for sponsor in site.sponsor %}
-        <img src="/static/img/{{ site.sponsors[sponsor].logo }}.png" srcset="/static/img/{{ site.sponsors[sponsor].logo }}.png 1x, /static/img/{{ site.sponsors[sponsor].logo }}@2x.png 2x, /static/img/{{ site.sponsors[sponsor].logo }}@3x.png 3x, /static/img/{{ site.sponsors[sponsor].logo }}@4x.png 4x" alt="{{ site.sponsors[sponsor].short }}" />
-        {% endfor %}
-        </div>
-        {% assign first_sponsor = site.sponsors[site.sponsor.first] %}
-        <p class="thuhidden">本存储服务器由<a href="{{ first_sponsor.link }}">{{ first_sponsor.name }}</a>（{{ first_sponsor.eng }}）赞助{% if site.poweredby %}，并由{{ site.poweredbys[site.poweredby] }}强力驱动{% endif %}。TUNA 感谢<!--
-        {% for sponsor in site.sponsor %}
-        -->{{ site.sponsors[sponsor].short }}<!--
-          {% if forloop.rindex0 == 1 %}
-          -->和<!--
-          {% elsif forloop.rindex0 > 1 %}
-          -->、<!--
-          {% endif %}
-        {% endfor %}
-        -->对开源软件和社区的贡献。</p>
-        {% endif %}
       </div>
       <div class="col-lg-4 col-md-4{% if page.legacy %} col-xs-4{% endif %}">
         <img class="img-responsive thuhidden center-block" style="margin-top:5%" src="/static/img/logo-white.png" srcset="/static/img/logo-white.png 1x, /static/img/logo-white@2x.png 2x, /static/img/logo-white@3x.png 3x, /static/img/logo-white@4x.png 4x" />
