--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -37,14 +37,14 @@
 						{% endunless %}
 					</picture>
 					{% endif %}
-					{{ site.school }}</span>开源软件镜像站
+					{{ site.school }}</span>软件镜像站
 			</a>
     </div>
     <div class="{% unless page.legacy %}navbar-collapse collapse {% endunless %}navbar-right">
       <ul class="nav navbar-nav" role="menubar">
         {% unless site.hide_navbar %}
         <li role="none"><a role="menuitem" href="{{ site.homelink }}">HOME</a></li>
-        <li role="none"><a role="menuitem" href="https://tuna.moe/events/">EVENTS</a></li>
+        <li role="none"><a role="menuitem" href="https://github.com/serialt/">SERIALT</a></li>
         <li role="none"><a role="menuitem" href="https://tuna.moe/blog/">BLOG</a></li>
         <li role="none"><a role="menuitem" href="https://tuna.moe/feed.xml">RSS</a></li>
         <li role="none"><a role="menuitem" href="https://podcast.tuna.moe/">PODCAST</a></li>
